--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
 										Você vai encontrar também minhas experiências profissionais, habilidades, ferramentas e conceitos envolvendo a Ciência de Dados. <br />Sinta-se à vontade para entrar em contato através dos links no final da página.</p>
 									</div>
 									<span class="image object">
-  										<img src="images/foto.jpg" alt="Minha foto" style="max-width: 100%; height: auto; display: block; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.1);" />
+  										<img src="images/foto.jpg" alt="Minha foto"
+       										     style="max-width: 100%; height: auto; display: block;" />
 									</span>
+
 								</section>
 
 
