--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
 										Você vai encontrar também minhas experiências profissionais, habilidades, ferramentas e conceitos envolvendo a Ciência de Dados. <br />Sinta-se à vontade para entrar em contato através dos links no final da página.</p>
 									</div>
 									<span class="image object">
-  										<img src="images/foto.jpg" alt="Minha foto"
-       										     style="max-width: 100%; height: auto; display: block;" />
+										<img src="images/foto.jpg" alt="" />
 									</span>
 
 								</section>
