--- a/index.html
+++ b/index.html
@@ -62,11 +62,12 @@
 										<article>
 											<span class="icon fa-gem"></span>
 											<div class="content">
-												<h3>Linguagens de Programação e Banco de Dados</h3>
+												<h3>Linguagens de Programação</h3>
 												<ul>
 													<li>Python com foco em análise de dados</li>
 													<li>SQL para extração de dados</li>
-													<li>R para modelagem estatística</li>
+													<li>Pensamento estratégico</li>
+													<li>Conceitos de ETL<li>
 													<li>Banco de Dados: SQLite, MySQL e DBeaver</li>
 												</ul>
 											</div>
@@ -90,6 +91,7 @@
 												<h3>Visualização de Dados</h3>
 												<ul>
 													<li>Matplotlib, Seaborn, Plotly, Bokeh</li>
+													<li>Streamlit<li>
 													<li>Power BI</li>
 												</ul>
 											</div>
@@ -101,6 +103,7 @@
 												<ul>
 													<li>Git, Github e Gitlab</li>
 													<li>Python API's</li>
+													<li>Streamlit Cloud</li>
 												</ul>
 											</div>
 										</article>
