--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
 											<div class="content">
 												<h3>Linguagens de Programação</h3>
 												<ul>
-													<li>Python com foco em análise de dados</li>
-													<li>SQL para extração de dados</li>
-													<li>Pensamento estratégico</li>
-													<li>Conceitos de ETL<li>
-													<li>Banco de Dados: SQLite, MySQL e DBeaver</li>
+													<li>Python com foco em análise de dados.</li>
+													<li>SQL para extração de dados.</li>
+													<li>Pensamento estratégico.</li>
+													<li>Conceitos de ETL.</li>
+													<li>Banco de Dados: SQLite, MySQL e DBeaver.</li>
 												</ul>
 											</div>
 										</article>
