--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 												<h3>Visualização de Dados</h3>
 												<ul>
 													<li>Matplotlib, Seaborn, Plotly, Bokeh</li>
-													<li>Streamlit<li>
+													<li>Streamlit</li>
 													<li>Power BI</li>
 												</ul>
 											</div>
