--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 												<li>Power Query</li>
 											</ul>
 											<ul class="actions">
-												<li><a href="https://drive.google.com/drive/folders/1gJJWKm02PwlzoxZ80Ch1utqoVek_mb1m?usp=sharing" class="button">Saiba Mais</a></li>
+												<li><a href="https://github.com/M4rcos26/Gest-o-de-indicadores" class="button">Saiba Mais</a></li>
 											</ul>
 										</article>
 										<article>
