--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Olá, seja muito bem-vindo(a) ao meu portfólio de projetos de Ciência de Dados.<br />
+											<h1>Olá, seja muito bem-vindo(a) ao meu portfólio de projetos de Análise de Dados.<br />
 											</h1>
 										</header>
 										<p>Nessa página, eu demonstro minhas habilidades de resolver problemas de negócio utilizando conceitos e ferramentas da Ciência de Dados, através de projetos com dados públicos.<br />
@@ -117,7 +117,7 @@
 	</header>
 
 	<!-- Content -->
-		<h2 id="content">5+ Projetos completos em Análise de Dados</h2>
+		<h2 id="content">Projetos completos em Análise de Dados</h2>
 		<p>Construção de soluções de dados para problemas de negócio, próximos dos desafios reais das empresas, utilizando dados públicos de competições de Ciência de Dados, onde eu abordei o problema desde a concepção do desafio de negócio até a publicação do algoritmo treinado em produção.</p>
 		<div class="row">
 			<div class="col-6 col-12-small">
@@ -130,64 +130,6 @@
 										<h1>Projetos em Análise de Dados</h1>
 									</header>
 									<div class="posts">
-										<article>
-											<a href="#" class="image"><img src="images/projeto_1.jpg" alt="" /></a>
-											<h3>Análise de imóveis da cidade de New York no Google Colab</h3>
-											<p>Realização de análise exploratória e visualização de dados de imóveis na cidade de New York usando Python no ambiente Google Colab. Identificação do preço médio por noite, tipo de imóvel, influência da localidade no preço médio por noite, quantidade de imóveis por estado e por bairro, identificação dos locatários com maior número de imóveis..</p>
-											<h4>Ferramentas Utilizadas</h4>
-											<ul>
-												<li>Python, Pandas, Matplotlib e Seaborn</li>
-												<li>Google Colab</li>
-												<li>Mapas interativos com Plotly e Folium</li>
-												</ul>
-											<ul class="actions">
-												<li><a href="https://colab.research.google.com/drive/1Ct6fvfk3rMNSrCGz757-cIYjWeYNw9ji?usp=sharing" class="button">Saiba Mais</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/projeto_2.jpg" alt="" /></a>
-											<h3>Análise de dados de Ecommerce no DBeaver</h3>
-											<p>Consulta, manipulação e análise dos dados do Ecommerce utilizando SQL no DBeaver. Análise dos produtos mais vendidos, dos estados mais consumidores, do impacto do frete nas vendas, identificação dos vendedores com maior quantidade de produtos vendidos por estado e por cidade.</p>
-											<h4>Ferramentas Utilizadas</h4>
-											<ul>
-												<li>DBeaver</li>
-												<li>SQL</li>
-												<li>Banco de Dados Relacional</li>
-												</ul>
-											<ul class="actions">
-												<li><a href="https://drive.google.com/drive/folders/1Vc-fWxCxFKsNFAglVlwzn4kmVuN3zTNY?usp=sharing" class="button">Saiba Mais</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/projeto_3.jpg" alt="" /></a>
-											<h3>Análise de dados de E-commerce no Excel e criação de dashboards</h3>
-											<p>Desenvolvimento de relatórios e dashboards gerenciais para acompanhamento de performance de vendas, gestão de produtos e análise de pagamentos afim de trazer insights importantes para a tomada de decisões e gerenciamento do negócio.</p>
-											<h4>Ferramentas Utilizadas</h4>
-											<ul>
-												<li>Microsoft Excel</li>
-												<li>Tabelas Dinâmicas</li>
-												<li>Gráficos Dinâmicos</li>
-												<li>Dashboard</li>
-											</ul>
-											<ul class="actions">
-												<li><a href="#" class="button">Saiba Mais</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/projeto_4.jpg" alt="" /></a>
-											<h3>Análise de dados no Power BI</h3>
-											<p>Construção de painéis interativos e visualizações avançadas para análise de dados, permitindo a tomada de decisão baseada em indicadores de performance e tendências de mercado. Foram criadas análise de produtos, vendedores, pagamentos e um painel de gestão dos principais indicadores do comercio contendo informações como, faturamento atual, faturamento do ano anterior e meta mensal da empresa.</p>
-											<h4>Ferramentas Utilizadas</h4>
-											<ul>
-												<li>Power BI</li>
-												<li>Modelagem de Dados</li>
-												<li>DAX (Data Analysis Expressions)</li>
-												<li>Power Query</li>
-											</ul>
-											<ul class="actions">
-												<li><a href="https://github.com/M4rcos26/Gest-o-de-indicadores" class="button">Saiba Mais</a></li>
-											</ul>
-										</article>
 										<article>
 											<a href="#" class="image"><img src="images/projeto_5.jpg" alt="" /></a>
 											<h3>Desenvolvimento de um Painel Gerencial para Negócio com o Stremlit</h3>
@@ -206,6 +148,65 @@
 												<li><a href="https://github.com/M4rcos26/Curry_Company" class="button">Saiba Mais</a></li>
 											</ul>
 										</article>
+										<article>
+											<a href="#" class="image"><img src="images/projeto_4.jpg" alt="" /></a>
+											<h3>Análise de dados no Power BI</h3>
+											<p>Construção de painéis interativos e visualizações avançadas para análise de dados, permitindo a tomada de decisão baseada em indicadores de performance e tendências de mercado. Foram criadas análise de produtos, vendedores, pagamentos e um painel de gestão dos principais indicadores do comercio contendo informações como, faturamento atual, faturamento do ano anterior e meta mensal da empresa.</p>
+											<h4>Ferramentas Utilizadas</h4>
+											<ul>
+												<li>Power BI</li>
+												<li>Modelagem de Dados</li>
+												<li>DAX (Data Analysis Expressions)</li>
+												<li>Power Query</li>
+											</ul>
+											<ul class="actions">
+												<li><a href="https://github.com/M4rcos26/Gest-o-de-indicadores" class="button">Saiba Mais</a></li>
+											</ul>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/projeto_3.jpg" alt="" /></a>
+											<h3>Análise de dados de E-commerce no Excel e criação de dashboards</h3>
+											<p>Desenvolvimento de relatórios e dashboards gerenciais para acompanhamento de performance de vendas, gestão de produtos e análise de pagamentos afim de trazer insights importantes para a tomada de decisões e gerenciamento do negócio.</p>
+											<h4>Ferramentas Utilizadas</h4>
+											<ul>
+												<li>Microsoft Excel</li>
+												<li>Tabelas Dinâmicas</li>
+												<li>Gráficos Dinâmicos</li>
+												<li>Dashboard</li>
+											</ul>
+											<ul class="actions">
+												<li><a href="#" class="button">Saiba Mais</a></li>
+											</ul>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/projeto_2.jpg" alt="" /></a>
+											<h3>Análise de dados de Ecommerce no DBeaver</h3>
+											<p>Consulta, manipulação e análise dos dados do Ecommerce utilizando SQL no DBeaver. Análise dos produtos mais vendidos, dos estados mais consumidores, do impacto do frete nas vendas, identificação dos vendedores com maior quantidade de produtos vendidos por estado e por cidade.</p>
+											<h4>Ferramentas Utilizadas</h4>
+											<ul>
+												<li>DBeaver</li>
+												<li>SQL</li>
+												<li>Banco de Dados Relacional</li>
+												</ul>
+											<ul class="actions">
+												<li><a href="https://drive.google.com/drive/folders/1Vc-fWxCxFKsNFAglVlwzn4kmVuN3zTNY?usp=sharing" class="button">Saiba Mais</a></li>
+											</ul>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/projeto_1.jpg" alt="" /></a>
+											<h3>Análise de imóveis da cidade de New York no Google Colab</h3>
+											<p>Realização de análise exploratória e visualização de dados de imóveis na cidade de New York usando Python no ambiente Google Colab. Identificação do preço médio por noite, tipo de imóvel, influência da localidade no preço médio por noite, quantidade de imóveis por estado e por bairro, identificação dos locatários com maior número de imóveis..</p>
+											<h4>Ferramentas Utilizadas</h4>
+											<ul>
+												<li>Python, Pandas, Matplotlib e Seaborn</li>
+												<li>Google Colab</li>
+												<li>Mapas interativos com Plotly e Folium</li>
+												</ul>
+											<ul class="actions">
+												<li><a href="https://colab.research.google.com/drive/1Ct6fvfk3rMNSrCGz757-cIYjWeYNw9ji?usp=sharing" class="button">Saiba Mais</a></li>
+											</ul>
+										</article>
+										
 									</div>
 								</section>
 
