--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 											<h1>Olá, seja muito bem-vindo(a) ao meu portfólio de projetos de Análise de Dados.<br />
 											</h1>
 										</header>
-										<p>Nessa página, eu demonstro minhas habilidades de resolver problemas de negócio utilizando conceitos e ferramentas da Ciência de Dados, através de projetos com dados públicos.<br />
+										<p>Nessa página, eu demonstro minhas habilidades de resolver problemas de negócio utilizando conceitos e ferramentas da Análise de Dados, através de projetos com dados públicos.<br />
 										Você vai encontrar também minhas experiências profissionais, habilidades, ferramentas e conceitos envolvendo a Ciência de Dados. <br />Sinta-se à vontade para entrar em contato através dos links no final da página.</p>
 									</div>
 									<span class="image object">
@@ -118,7 +118,7 @@
 
 	<!-- Content -->
 		<h2 id="content">Projetos completos em Análise de Dados</h2>
-		<p>Construção de soluções de dados para problemas de negócio, próximos dos desafios reais das empresas, utilizando dados públicos de competições de Ciência de Dados, onde eu abordei o problema desde a concepção do desafio de negócio até a publicação do algoritmo treinado em produção.</p>
+		<p>Construção de soluções de dados para problemas de negócio, próximos dos desafios reais das empresas, utilizando dados públicos de competições de Análise de Dados, onde eu abordei o problema desde a concepção do desafio de negócio até a publicação do algoritmo treinado em produção.</p>
 		<div class="row">
 			<div class="col-6 col-12-small">
 		</div>
@@ -143,9 +143,9 @@
 												<li>Streamlit</li>
 												<li>Streamlit Cloud</li>
 												<li>Github</li>
-											</ul>
 											<ul class="actions">
-												<li><a href="https://github.com/M4rcos26/Curry_Company" class="button">Saiba Mais</a></li>
+											  <li><a href="https://currycompany-j4otf4mv3juurxdm3sxgwr.streamlit.app/" class="button">Visualização no Streamlit</a></li>
+											  <li><a href="https://github.com/M4rcos26/Curry_Company" class="button">Github</a></li>
 											</ul>
 										</article>
 										<article>
@@ -160,7 +160,7 @@
 												<li>Power Query</li>
 											</ul>
 											<ul class="actions">
-												<li><a href="https://github.com/M4rcos26/Gest-o-de-indicadores" class="button">Saiba Mais</a></li>
+												<li><a href="https://github.com/M4rcos26/Gest-o-de-indicadores" class="button">Github</a></li>
 											</ul>
 										</article>
 										<article>
@@ -175,7 +175,7 @@
 												<li>Dashboard</li>
 											</ul>
 											<ul class="actions">
-												<li><a href="#" class="button">Saiba Mais</a></li>
+												<li><a href="#" class="button">Github</a></li>
 											</ul>
 										</article>
 										<article>
@@ -189,7 +189,7 @@
 												<li>Banco de Dados Relacional</li>
 												</ul>
 											<ul class="actions">
-												<li><a href="https://drive.google.com/drive/folders/1Vc-fWxCxFKsNFAglVlwzn4kmVuN3zTNY?usp=sharing" class="button">Saiba Mais</a></li>
+												<li><a href="https://drive.google.com/drive/folders/1Vc-fWxCxFKsNFAglVlwzn4kmVuN3zTNY?usp=sharing" class="button">Github</a></li>
 											</ul>
 										</article>
 										<article>
@@ -203,7 +203,7 @@
 												<li>Mapas interativos com Plotly e Folium</li>
 												</ul>
 											<ul class="actions">
-												<li><a href="https://colab.research.google.com/drive/1Ct6fvfk3rMNSrCGz757-cIYjWeYNw9ji?usp=sharing" class="button">Saiba Mais</a></li>
+												<li><a href="https://colab.research.google.com/drive/1Ct6fvfk3rMNSrCGz757-cIYjWeYNw9ji?usp=sharing" class="button">Google Colab</a></li>
 											</ul>
 										</article>
 										
