--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 												<li>Dashboard</li>
 											</ul>
 											<ul class="actions">
-												<li><a href="#" class="button">Github</a></li>
+												<li><a href="https://github.com/M4rcos26/An-lise-de-dados-de-E-commerce-no-Excel" class="button">Github</a></li>
 											</ul>
 										</article>
 										<article>
