--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 												<li>Banco de Dados Relacional</li>
 												</ul>
 											<ul class="actions">
-												<li><a href="https://drive.google.com/drive/folders/1Vc-fWxCxFKsNFAglVlwzn4kmVuN3zTNY?usp=sharing" class="button">Github</a></li>
+												<li><a href="https://github.com/M4rcos26/An-lise-de-dados-de-Ecommerce-no-DBeaver">Github</a></li>
 											</ul>
 										</article>
 										<article>
